Creators ok, Properties ok (TODO : Add property)

--- a/src/views/view-editor.html
+++ b/src/views/view-editor.html
@@ -1,3 +1,11 @@
+<script>
+const EventEmitter = require('events').EventEmitter;
+const util = require('util');
+</script>
+<link rel="import" href="../components/ModuleComponent.html">
+<link rel="import" href="../components/LinkComponent.html">
+<link rel="import" href="../components/ModuleCreator.html">
+
 
 <dom-module id="view-editor">
 <style>
@@ -49,35 +57,8 @@
 </dom-module>
 <script>
 
+
 var PGCC = require("pgcc");
-
-function Module(name) {
-	this.x = Math.random()*1000;
-	this.y = Math.random()*700,
-	this.name = name;
-
-	this.pins = [
-			{ name:"VCC", side:"left" },
-			{ name:"Vin", side:"left"},
-			{ name:"OV", side:"left"},
-			{ name:"learn", side:"top"},
-			{ name:"RX", side:'right'},
-			{ name:"TX", side:"right"}
-		];
-
-	this.moveListeners = [];
-}
-
-
-function Link(src, dst, srcPin, dstPin) {
-	this.src = src;
-	this.dst = dst;
-	this.srcPin = srcPin;
-	this.dstPin = dstPin;
-};
-
-
-
 
 var LAST_NEW_DOC = 0;
 
@@ -182,137 +163,12 @@ Polymer({
 	},
 
 	addModule: function(m) {
-		var that = this;
-		if(!m.x) m.x = m.params.x;
-		if(!m.y) m.y = m.params.y;
-		if(!m.x) m.params.x = m.x = Math.random()*1000;
-		if(!m.y) m.params.y = m.y = Math.random()*700;
-
-		var module = this.world.append("g")
-			.attr("transform" , "translate(" + m.x+ "," +m.y + ")");
-
-		m.component = module;
-		m.pinCoords = {};
-
-		var w = 85;
-		var h = 65;
-
-		module.moveListeners = [];
-		module.onMove = function(callback) {
-			this.moveListeners.push(callback);
-		};
-
-
-		var dragBehavior = d3.behavior.drag()
-	      .on("drag", function() {
-			  	if(d3.event.sourceEvent.which !== 1) return;
-
-				that.select(m);
-
-			  	var tr = d3.transform(d3.select(this).attr("transform"));
-				tr.translate[0] += d3.event.dx;
-	            tr.translate[1] += d3.event.dy;
-				m.params.x = m.x = tr.translate[0];
-				m.params.y = m.y = tr.translate[1];
-
-				for(var i in m.pinCoords) {
-					m.pinCoords[i].x += d3.event.dx;
-					m.pinCoords[i].y += d3.event.dy;
-				}
-
-	            d3.select(this).attr("transform", "translate("+tr.translate+")");
-				module.moveListeners.forEach(function(cb) { cb.bind(m)(); });
-				that.modified = true;
-	      });
-		module.call(dragBehavior);
-
-		module.append("rect")
-			.classed("module", true)
-			.attr("x", -w/2)
-			.attr("y", -h/2)
-    		.attr("rx", 3)
-    		.attr("ry", 3)
-    		.attr("width", w)
-    		.attr("height", h);
-
-		module.append("text")
-			.classed("module", true)
-			.text(m.class + " " + m.id)
-			.attr('text-anchor',"middle")
-			.attr('y', h/2+2)
-			.attr("dominant-baseline", "text-before-edge");
-
-		function addPin(name, side, pct) {
-			var x,y;
-			var MARG = 1;
-			if(side=="left") { x = -w/2; y = (pct-0.5)*MARG*h; }
-			else if(side=="right") { x = w/2; y = (pct-0.5)*MARG*h; }
-			else if(side=="top") { x = (pct-0.5)*MARG*w; y = -h/2; }
-			else if(side=="bottom") { x = (pct-0.5)*MARG*w; y = h/2; }
-			else return;
-			var pin = module.append("rect")
-				.classed("pin", true)
-				.attr("x", x-5/2)
-				.attr("y", y-5/2)
-				.attr("rx", 1)
-				.attr("ry", 1)
-				.attr("width", 5)
-				.attr("height", 5);
-			module.append("text")
-				.classed("pin", true)
-				.attr("x", side==="top" || side==="bottom" ? x : side==="left" ? x + 3 : x - 3)
-				.attr("y", side==="left" || side==="right" ? y : side==="top" ? y + 3 : y - 3)
-				.attr("dominant-baseline", side==="left" || side==="right" ? "central" : side==="top" ?  "text-before-edge" : "text-after-edge" )
-				.attr("text-anchor", side==="top" || side==="bottom" ? "middle" : side==="left" ? "start" : "end")
-				.text(name);
-
-			var ctm = pin.node().getCTM();
-			m.pinCoords[name] = {x:ctm.e+x,y:ctm.f+y};
-		}
-
-		if(m.pins) {
-			["left", "right", "top", "bottom"].forEach(function(side){
-				var pins = m.pins.filter(function(p){return p.side === side; });
-				for(var i=0; i<pins.length; i++) {
-					addPin(pins[i].name, side, (i+1)/(pins.length+1));
-				}
-			});
-		}
-
-		module.node().addEventListener("click", function(e) { that.select(m); e.stopPropagation(); });
-
+		m.component = new ModuleComponent(this, m);
 		this.push("modules", m);
 	},
 
-	addLink: function(link) {
-
-		function getSrcPoint() {
-			var ptSrc = link.src;
-			if(link.srcPin && ptSrc.pinCoords[link.srcPin]) ptSrc = ptSrc.pinCoords[link.srcPin];
-			return [ptSrc.x, ptSrc.y];
-		}
-
-		function getDstPoint() {
-			var ptDst = link.dst;
-			if(link.dstPin && ptDst.pinCoords[link.dstPin]) ptDst = ptDst.pinCoords[link.dstPin];
-			return [ptDst.x, ptDst.y];
-		}
-
-		function bezier() {
-			//	return "M"+[x1,y1]+" C"+[x2,y1,x1,y2,x2,y2];
-			return "M"+getSrcPoint()+ "L"+getDstPoint();
-		}
-
-		var line = this.world.insert("path", "g").attr("d", bezier());
-
-		link.component = line;
-
-		line.node().addEventListener("click", function(e) {
-			that.select(link); e.stopPropagation();
-		});
-
-		link.src.component.onMove(function(){ line.attr("d", bezier()); });
-		link.dst.component.onMove(function(){ line.attr("d", bezier()); });
+	addLink: function(l) {
+		l.component = new LinkComponent(this, l);
 	},
 
 
@@ -327,35 +183,55 @@ Polymer({
 		var link = new Link(src, dst, srcPin, dstPin);
 		this.addLink(link);
 		this.modified = true;
+		WORKBENCH.fire("modify");
 	},
 
-
+	getSelection: function() {
+		var s = this.selection.component;
+		if(!s) return this.selection;
+		return s;
+	},
 
 	select: function(o) {
-		if(this.selection) {
-			var s = this.selection.component;
-			if(!s) s = this.selection;
-			s.classed("selected", false);
-		}
+		if(this.selection) this.getSelection().setSelected(false);
 		this.selection = o;
-		var s = this.selection.component;
-		if(!s) s = this.selection;
-		s.classed("selected", true);
+		this.getSelection().setSelected(true);
+
+		WORKBENCH.selection = this.selection;
 	},
 
 	unselect: function() {
-		if(this.selection) {
-			var s = this.selection.component;
-			if(!s) s = this.selection;
-			s.classed("selected", false);
-		}
+		if(this.selection) this.getSelection().setSelected(false);
 		this.selection = null;
+
+		WORKBENCH.selection = this.selection;
 	},
 
 
 	onModifiedChanged: function() {
 		if(this.modified) this.fire("label", this.filename + "*");
-		else this.fire("label", this.filename);
+		else this.fire("label", this.filename || "null");
+	},
+
+
+	createModule: function(hint) {
+		if(!this.script) return;
+		if(this.creator) this.creator.cancel();
+
+		var m = new PGCC.Module(this.script);
+		m.class = hint.class;
+		m.id = hint.class + "0";
+		if(hint.id) m.id = hint.id;
+
+		this.creator = new ModuleCreator(this, m);
+		this.creator.on("create", function() {that.push("modules", m);});
+	},
+
+	clientToWorld: function(pt) {
+		var tr = d3.transform(this.world.attr("transform"));
+		var x = (pt.x - tr.translate[0]) / tr.scale[0];
+		var y = (pt.y - tr.translate[1]) / tr.scale[1] ;
+		return {x:x,y:y};
 	}
 
 });
